modular decman compatible with niri-session

--- a/systemd/user/polkit-agent.service
+++ b/systemd/user/polkit-agent.service
@@ -1,11 +1,7 @@
 [Unit]
 Description=Polkit Agent
-# stops the service when niri stops
-PartOf=niri.service
-
-[Install]
-# starts the service when niri starts
-WantedBy=niri.service
+BindsTo=niri.service
+After=niri.service
 
 [Service]
 ExecStart=/lib/polkit-kde-authentication-agent-1
