--- a/systemd/user/mako.service
+++ b/systemd/user/mako.service
@@ -1,11 +1,7 @@
 [Unit]
 Description=mako
-# stops the service when niri stops
-PartOf=niri.service
-
-[Install]
-# starts the service when niri starts
-WantedBy=niri.service
+BindsTo=niri.service
+After=niri.service
 
 [Service]
 ExecStart=/usr/bin/mako
