fixed idle-inhibitor, fixed swayidle, started systemctl in config.kdl

--- a/systemd/user/idle-inhibitor.service
+++ b/systemd/user/idle-inhibitor.service
@@ -4,4 +4,4 @@ BindsTo=niri.service
 After=niri.service
 
 [Service]
-ExecStart=/home/jappe/Repositories/idle-inhibitor/.venv/bin/python3.14 .config/niri/scripts/idle_inhibitor.py
+ExecStart=/home/jappe/.local/bin/idle-inhibitor
