--- a/systemd/user/swayidle.service
+++ b/systemd/user/swayidle.service
@@ -5,6 +5,5 @@ After=niri.service
 
 [Service]
 ExecStart=/usr/bin/swayidle -w \
-  timeout 300 'niri msg action power-off-monitors' \
-  timeout 300 'gtklock -s /home/jappe/.config/gtklock/style.css -D ""%A %d %B' \
-  timeout 900 'systemctl hibernate'
+timeout 300 'niri msg action power-off-monitors && gtklock -s /home/jappe/.config/gtklock/style.css' \
+timeout 900 'systemctl hibernate'
