fuzzel ignores steam default apps

--- a/gaming/steam_app_default/steam_app_default.desktop
+++ b/gaming/steam_app_default/steam_app_default.desktop
@@ -1,4 +1,7 @@
 [Desktop Entry]
+Name=SteamAppDefault
+Exec=
 Type=Application
 Icon=/home/jappe/Pictures/steam.png
+NoDisplay=true
 StartupWMClass=steam_app_default
