--- a/systemd/user/swayidle.service
+++ b/systemd/user/swayidle.service
@@ -5,4 +5,5 @@ After=niri.service
 
 [Service]
 ExecStart=/usr/bin/swayidle -w \
-timeout 300 'niri msg action power-off-monitors && gtklock -s /home/jappe/.config/gtklock/style.css'
+timeout 10 'niri msg action power-off-monitors' \
+timeout 10 'gtklock -d -s /home/jappe/.config/gtklock/style.css'
