alacritty full screen keybinding

--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -5,3 +5,8 @@ import = [
 
 [font]
 normal = { family = "JetBrainsMono Nerd Font Mono" }
+
+[keyboard]
+bindings = [
+    { key = "Enter", mods = "Super", action = "ToggleFullscreen" }
+    ]
