--- a/alacritty/themes/github_dark.toml
+++ b/alacritty/themes/github_dark.toml
@@ -2,35 +2,32 @@
 
 # Default colors
 [colors.primary]
-background = '#24292e'
-foreground = '#d1d5da'
+background = '#0d1117'
+foreground = '#e6edf3'
+
+[colors.cursor]
+text = '#0d1117'
+cursor = '#e6edf3'
+ 
 
 # Normal colors
 [colors.normal]
-black   = '#586069'
-red     = '#ea4a5a'
-green   = '#34d058'
-yellow  = '#ffea7f'
-blue    = '#2188ff'
-magenta = '#b392f0'
+black   = '#484f58'
+red     = '#ff7b72'
+green   = '#3fb950'
+yellow  = '#d29922'
+blue    = '#58a6ff'
+magenta = '#bc8cff'
 cyan    = '#39c5cf'
-white   = '#d1d5da'
+white   = '#b1bac4'
 
 # Bright colors
 [colors.bright]
-black   = '#959da5'
-red     = '#f97583'
-green   = '#85e89d'
-yellow  = '#ffea7f'
-blue    = '#79b8ff'
-magenta = '#b392f0'
-cyan    = '#56d4dd'
-white   = '#fafbfc'
-
-[[colors.indexed_colors]]
-index = 16
-color = '#d18616'
-
-[[colors.indexed_colors]]
-index = 17
-color = '#f97583'
+black   = '#6e7681'
+red     = '#ffa198'
+green   = '#56d364'
+yellow  = '#e3b341'
+blue    = '#79c0ff'
+magenta = '#bc8cff'
+cyan    = '#39c5cf'
+white   = '#b1bac4'
