added transparency to nvim/alacritty

--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -12,4 +12,8 @@ bindings = [
     ]
 
 [window]
+opacity = 0.80
 decorations_theme_variant = "Dark"
+
+[colors]
+transparent_background_colors = true
