--- a/misc/code/settings.json
+++ b/misc/code/settings.json
@@ -1,24 +1,38 @@
 {
     // editor settings
-    "workbench.colorTheme": "GitHub Dark Default",
     "editor.lineNumbers": "relative",
-    "editor.fontFamily": "JetBrainsMono Nerd Font Mono",
     "editor.fontLigatures": true,
-    
-    // main view settings
     "editor.minimap.enabled": false,
-    "window.menuBarVisibility": "compact",
-    "workbench.activityBar.location": "hidden",
-    // "workbench.statusBar.visible": false,
-    "workbench.statusBar.visible": true,
-    "workbench.startupEditor": "none", 
+    "editor.stickyScroll.enabled": false,
+    "editor.matchBrackets": "never",
+    "editor.tabCompletion": "on",
+    "editor.scrollbar.vertical": "hidden",
+    "editor.occurrencesHighlight": "off",
+    "editor.overviewRulerBorder": false,
+    "editor.hideCursorInOverviewRuler": true,
+    
+    // window settings
+    "window.menuBarVisibility": "hidden",
+    "window.titleBarStyle": "native",
+    "window.customTitleBarVisibility": "never",
     "breadcrumbs.enabled": true,
+    
+    // workbench settings
+    "workbench.colorTheme": "GitHub Dark Default",
+    "workbench.activityBar.location": "hidden",
+    "workbench.statusBar.visible": true,
+    "workbench.startupEditor": "none",
+    "workbench.tips.enabled": false,
+    "workbench.tree.enableStickyScroll": false,
+    "workbench.tree.renderIndentGuides": "none",
+    "workbench.tree.indent": 16,
    
     // file explorer settings
     "explorer.compactFolders": false,
     "explorer.confirmDragAndDrop": false,
     "explorer.confirmDelete": false,
     "explorer.decorations.colors": false,
+    "git.decorations.enabled": false,
 
     // neovim settings
     "extensions.experimental.affinity": {
