--- a/misc/code/settings.json
+++ b/misc/code/settings.json
@@ -13,13 +13,11 @@
     "breadcrumbs.enabled": false,
     "terminal.integrated.stickyScroll.enabled": false,
     "terminal.integrated.suggest.enabled": false,
-
     // window settings
     "window.menuBarVisibility": "hidden",
     "window.titleBarStyle": "native",
     "window.menuStyle": "custom",
     "window.customTitleBarVisibility": "never",
-
     // workbench settings
     "workbench.colorTheme": "GitHub Dark Default",
     "workbench.activityBar.location": "hidden",
@@ -29,22 +27,24 @@
     "workbench.tree.enableStickyScroll": false,
     "workbench.tree.renderIndentGuides": "none",
     "workbench.tree.indent": 16,
-
     // file explorer settings
     "explorer.compactFolders": false,
     "explorer.confirmDragAndDrop": false,
     "explorer.confirmDelete": false,
     "explorer.decorations.colors": false,
     "git.decorations.enabled": false,
-
     // neovim settings
     "extensions.experimental.affinity": {
         "asvetliakov.vscode-neovim": 1
     },
     "vscode-neovim.neovimInitVimPaths.linux": "/home/jappe/.config/nvim/init.lua",
-
     // files settings
     "files.dialog.defaultPath": "/home/jappe/Repositories",
     "files.trimTrailingWhitespace": true,
     "files.insertFinalNewline": true,
+    // copilot settings
+    "github.copilot.nextEditSuggestions.enabled": false,
+    "github.copilot.enable": {
+        "*": false
+    },
 }
