updates to the neovim vscode setup

--- a/misc/code/settings.json
+++ b/misc/code/settings.json
@@ -10,6 +10,10 @@
     "editor.occurrencesHighlight": "off",
     "editor.overviewRulerBorder": false,
     "editor.hideCursorInOverviewRuler": true,
+    "editor.rulers": [100],
+    "editor.wordWrap": "wordWrapColumn",
+    "editor.wordWrapColumn": 100,
+    "editor.wrapOnEscapedLineFeeds": true,
     "breadcrumbs.enabled": false,
     "terminal.integrated.stickyScroll.enabled": false,
     "terminal.integrated.suggest.enabled": false,
