neovim vscode improvements

--- a/misc/code/settings.json
+++ b/misc/code/settings.json
@@ -9,7 +9,7 @@
     "editor.scrollbar.vertical": "hidden",
     "editor.occurrencesHighlight": "off",
     "editor.overviewRulerBorder": false,
-    "editor.hideCursorInOverviewRuler": true,
+    "editor.cursorBlinking": "solid",
     "editor.rulers": [100],
     "editor.wordWrap": "wordWrapColumn",
     "editor.wordWrapColumn": 100,
