setting up a miminal nvim + lsp config

--- a/misc/code/wsl/settings.json
+++ b/misc/code/wsl/settings.json
@@ -62,6 +62,7 @@
     "github.copilot.enable": {
         "*": false
     },
+    "python.defaultInterpreterPath": "c:\\Python314\\python.exe",
     // "ruff.configuration": "${workspaceFolder}/pyproject.toml",
     // "debugpy.debugJustMyCode": false,
 }
